// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stocks output snapshots > formatStockOutput > renders full stock detail for 1d range 1`] = `
"1d

     price │ 162.85
      open │ 151.00
      high │ 163.00
       low │ 149.50
prev close │ 150.25
    change │ ▲ +12.60 (+8.39%)
    volume │ 120.000
  currency │ USD
  timezone │ America/New_York"
`;

exports[`stocks output snapshots > formatStockOutput > renders negative change detail 1`] = `
"1w

     price │ 140.00
      open │ 149.00
      high │ 150.00
       low │ 138.50
prev close │ 150.25
    change │ ▼ -10.25 (-6.82%)
    volume │ 250.000
  currency │ USD
  timezone │ America/New_York"
`;

exports[`stocks output snapshots > formatStockOutput > renders stock with missing optional fields 1`] = `
"1m

     price │ 162.85
      open │ -
      high │ -
       low │ -
prev close │ 150.25
    change │ ▲ +12.60 (+8.39%)
    volume │ -
  currency │ USD
  timezone │ America/New_York"
`;
